Add functionality to export SQLite database to Excel format and update README with instructions

--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,9 @@ dependencies:
   - python=3.8
   - sqlite
   - tqdm
+  - pandas
   - pip
   - pip:
       - python-dotenv
       - praw
+      - openpyxl
